<resources>
    <string name="app_name">Guide</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="riot_police_defend_sleeping_beauty_s_castle_in_disneyland_on_august_6th_1970_preparing_for_an_unannounced_invasion_of_yippies_from_the_youth_international_party_the_santa_fe_railway_rolls_through_orange_groves_in_this_1941_postcard_from_the_curt_teich_company_suburban_irvine_designed_by_planners_in_the_late_1960s_and_early_1970s_with_parkways_smog_free_white_collar_industries_and_acres_of_beige_housing_where_a_homogeneous_appearance_can_make_it_difficult_to_perceive_actual_heterogeneity">Riot police defend Sleeping Beauty\'s castle in Disneyland on August 6th 1970, preparing for an unannounced invasion of Yippies from the Youth International Party ; the Santa Fe Railway rolls through orange groves in this 1941 postcard from the Curt Teich Company ; suburban Irvine, designed by planners in the late 1960s and early 1970s with parkways, smog-free white-collar industries, and acres of beige housing where a homogeneous appearance can make it difficult to perceive actual heterogeneity</string>
    <string name="view_all_locations">View All Locations</string>
    <string name="about_this_app">About This App</string>
    <string name="know_your_oc_history">Know Your OC History</string>
    <string name="popular_culture_depicts_orange_county_as_home_to_disneyland_beaches_neo_nazis_decadent_housewives_and_the_modern_day_republican_party_too_few_people_recognize_that_orange_county_also_includes_civil_rights_heroes_lgbtq_victories_struggles_for_public_space_cold_war_global_migrations_indigenous_persistence_and_labor_movements_our_past_and_present_are_diverse_and_discordant_and_fascinating_this_app_helps_you_know_your_oc_history">Popular culture depicts Orange County as home to Disneyland, beaches, neo-Nazis, decadent housewives, and the modern-day Republican Party. Too few people recognize that Orange County also includes civil rights heroes, LGBTQ victories, struggles for public space, Cold War global migrations, Indigenous persistence, and labor movements. Our past and present are diverse and discordant and fascinating. This app helps you know your OC history.</string>
    <string name="based_on_the_book_a_people_s_guide_to_orange_county_by_elaine_lewinnek_gustavo_arellano_and_thuy_vo_dang_designed_by_karson_moyer_as_part_of_his_internship_for_valencia_high_school_and_building_on_a_google_map_created_by_ucla_students_davis_vo_samuel_stern_and_jorge_cruz_this_app_will_let_you_know_whenever_you_are_close_to_a_historic_place_of_power_struggle_in_orange_county">Based on the book A People’s Guide to Orange County by Elaine Lewinnek, Gustavo Arellano, and Thuy Vo Dang; designed by Karson Moyer as part of his internship for Valencia High School; and building on a google map created by UCLA students Davis Vo, Samuel Stern, and Jorge Cruz: this app will let you know whenever you are close to a historic place of power struggle in Orange County.</string>
    <string name="we_hope_you_will_use_this_app_with_the_book_a_people_s_guide_to_orange_county_to_explore_more_on_your_own_university_of_california_press_s_series_of_people_s_guides_share_stories_of_struggle_and_resistance_to_inspire_and_educate_activists_students_tourists_and_critical_thinkers">We hope you will use this app with the book A People’s Guide to Orange County to explore more on your own. University of California Press’s series of People’s Guides share stories of struggle and resistance to inspire and educate activists, students, tourists, and critical thinkers.</string>
</resources>